# pykokkos-base

./: .clang-format  .gitignore  .gitmodules  .jenkins  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  VERSION  errata.out  multi_gpu_copy.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: cancelling.yml  linux-ci.yml  python-package.yml
cmake/Modules/: KokkosPythonBuildOptions.cmake  KokkosPythonCompilers.cmake  KokkosPythonFormat.cmake  KokkosPythonKokkos.cmake  KokkosPythonOptions.cmake  KokkosPythonPackages.cmake  KokkosPythonSetup.cmake  KokkosPythonUtilities.cmake
cmake/Templates/: KokkosExp_InterOp.hpp  demangle.cpp
examples/: CMakeLists.txt  ex-generate.cpp  ex-numpy.py  user.cpp  user.hpp
include/: common.hpp  concepts.hpp  deep_copy.hpp  defines.hpp  execution_spaces.hpp  fwd.hpp  libpykokkos.hpp  pools.hpp  traits.hpp  views.hpp
include/pool_variants/: XorShift1024_pool.hpp  XorShift64_pool.hpp
include/variants/: atomics.hpp  concrete_view.hpp  dynamic_view.hpp
kokkos/: __init__.py.in  utility.py
kokkos/test/: __init__.py  __main__.py  _conftest.py  assignment.py  test_types.py  tools.py  views.py
scripts/: bundle-sdist.sh
scripts/docker/: Dockerfile.hipcc  Dockerfile.nvcc  Dockerfile.openmptarget  Dockerfile.sycl
src/: CMakeLists.txt  available.cpp  backend_version.cpp  common.cpp  complex_dtypes.cpp  concrete_view.cpp  dynamic_view.cpp  enumeration.cpp  execution_spaces.cpp  libpykokkos.cpp  tools.cpp
src/pool_variants/: CMakeLists.txt  pool.cpp.in  variant.cpp.in
src/variants/: CMakeLists.txt  atomics.cpp  variant.cpp.in  view.cpp.in
