[build-system]
requires = [
    "scikit-build",
    "cmake>=3.16",
]

[tool.black]
line-length = 88
target-version = ['py27', 'py35', 'py36', 'py37', 'py38']
include = '\.pyi?'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | external
  | scripts
  | _skbuild
  | __pycache__
  | \.pyc
  | \.pytest_cache
)/
'''
